tests/e2e/condensed_when_nested_path_invalid.error
Error: syntax error in story at line 3, column 9

3|        when log level: "normal"
               ^^^

E0108: Service output `log` must be unique. Use `as outputName`
