tests/e2e/condensed_when_nested_path_invalid.story
log = logging error
logging default
  	when log level: "normal"
  		x = 1
